# fact-guard

./: .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: Dockerfile  Dockerfile.prod  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: check.py  jobs.py  library.py  upload.py
backend/app/core/: chunking.py  confidence.py  sources.py
backend/app/models/: requests.py  responses.py
backend/app/services/: document.py  embeddings.py  jobs.py  llm.py  retrieval.py  vector_store.py
backend/app/utils/: text.py  web.py
ui/: Dockerfile.dev  Dockerfile.prod  nginx.conf  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/components/layout/: Background.tsx  FAB.tsx
ui/src/components/ui/: Button.tsx  Card.tsx  Drawer.tsx  Input.tsx  Spinner.tsx
ui/src/hooks/: useFactCheck.ts  useInterval.ts  useJobPolling.ts  useToast.ts  useUpload.ts
ui/src/services/: api.ts  factCheck.ts  library.ts  upload.ts
ui/src/styles/: animations.css  colors.css  globals.css
ui/src/types/: api.ts  factCheck.ts  ui.ts
ui/src/utils/: constants.ts  formatting.ts  validation.ts
